# gslib-zero

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: build-fortran.yml
docs/: binary-io-implementation.md  changelog.rst  conf.py  conventions.rst  index.rst  installation.rst  quickstart.rst
docs/api/: declustering.rst  drillhole.rst  estimation.rst  index.rst  rotations.rst  simulation.rst  transforms.rst  utils.rst  variogram.rst
examples/: 01_quickstart_kriging.ipynb  02_variogram_analysis.ipynb  03_drillhole_workflow.ipynb
fortran/: Makefile  build.bat  build.sh
fortran/src/: addcoord.for  anneal.for  backtr.for  bicalib.for  bigaus.for  bivplt.for  cokb3d.for  cokb3d.inc  copyright.txt  declus.for  draw.for  ellipsim.for  gam.for  gamv.for  gslib_binary_io.f90  gtsim.for  histplt.for  histsmth.for  histsmth.inc  ik3d.for  ik3d.inc  kb2d.for  kb2d.inc  kt3d.for  kt3d.inc  locmap.for  lusim.for  lusim.inc  nscore.for  pfsim.for  pixelplt.for  plotem.for  postik.for  postsim.for  probplt.for  qpplt.for  rotcoord.for  sasim.for  sasim.inc  scatplt.for  (+14 more)
src/gslib_zero/: __init__.py  core.py  declustering.py  drillhole.py  estimation.py  par.py  plotting.py  simulation.py  transforms.py  utils.py  variogram.py
tests/: __init__.py  conftest.py  test_core.py  test_drillhole.py  test_par.py  test_plotting.py  test_rotations.py  test_utils.py  test_wrappers.py
