[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gslib-zero"
version = "1.0.0"
description = "Python wrapper for Stanford's GSLIB Fortran 90 geostatistics programs with binary I/O"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Arthur Endlein", email = "endarthur@gmail.com" }
]
keywords = ["geostatistics", "kriging", "variogram", "simulation", "GSLIB", "mining", "geology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
drillhole = [
    "pandas>=1.4",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[project.urls]
Repository = "https://github.com/endarthur/gslib-zero"
Documentation = "https://gslib-zero.readthedocs.io"

[tool.hatch.build.targets.wheel]
packages = ["src/gslib_zero"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
